2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.c (pvm_shutdown): Call pvm_val_finalize instead of
	pvm_val_initialize.

2021-11-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/pktest.pk (pktest_run): Report location and message of
	failed assertion (if available) in output.
	* testsuite/poke.pktest/pktest-5.pk: Update accordingly.
	* testsuite/poke.pktest/pktest-7.pk: Likewise.
	* testsuite/poke.pktest/pktest-11.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_set): Avoid calculating the size of
	the remaining elements of the array.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/assert-4.pk: Update to new assertion
	exception fields.
	* testsuite/poke.pkl/assert-diag-1.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (check_struct_field_constraint): Use
	`location' and `msg' fields of Exception.
	* testsuite/poke.map/maps-structs-constraints-2.pk: Update
	accordingly.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pkl/scons-constraints-1.pk: Likewise.
	* testsuite/poke.map/maps-structs-constraints-3.pk: Likewise.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt-2.pk (_pkl_assert): Use the `location' and `msg'
	fields of Exception.

2021-11-30  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_make_exception): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_new): Adapt caller accordingly.
	* libpoke/pvm.jitter (PVM_RAISE): Likewise.
	* libpoke/pkl-gen.c: Likewise.
	* libpoke/ras: Likewise.
	* libpoke/pkl-rt-1.pk (Exception): New fields `location' and
	`msg'.
	(_pkl_exception_handler): Handle `location' and `msg'.

2021-11-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* testsuite/poke.pkl/format-21.pk: Replace `Exception` with locally
	defined type `E`.
	* testsuite/poke.pkl/format-22.pk: Likewise.